[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/items/freeze.png" type="Texture" id=1]
[ext_resource path="res://Scripts/FreezerInt.gd" type="Script" id=2]
[ext_resource path="res://Assets/Items/close.png" type="Texture" id=3]
[ext_resource path="res://Assets/Items/close_hover.png" type="Texture" id=4]

[node name="Freezer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -7.0
margin_right = 651.0
margin_bottom = 376.0
color = Color( 0, 0, 0, 0.627451 )

[node name="Button51" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
margin_left = 327.0
margin_top = 116.0
margin_right = 344.0
margin_bottom = 179.0

[node name="ButtonJuice" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 233.0
margin_top = 71.0
margin_right = 266.0
margin_bottom = 105.0

[node name="CelsoFreezer" type="Sprite" parent="."]
position = Vector2( 303, 187 )
texture = ExtResource( 1 )

[node name="CloseScene" type="TextureButton" parent="."]
margin_left = 588.0
margin_top = 38.0
margin_right = 613.0
margin_bottom = 67.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[connection signal="pressed" from="Button51" to="." method="_on_Button51_pressed"]
[connection signal="pressed" from="ButtonJuice" to="." method="_on_ButtonJuice_pressed"]
[connection signal="pressed" from="CloseScene" to="." method="_on_CloseScene_pressed"]
